--- a/src/css/about.scss
+++ b/src/css/about.scss
@@ -100,7 +100,7 @@
         .name  {font-size: 50px;}   
         .contactBox  {margin-bottom: 10%;}
         .iconText  {font-size: 10px;}
-        .iconSkill  {width: auto; height: 30%;}
+        .iconSkill  {width: auto; height: auto;}
         .skillTitle  {border-top: solid 1px white;}
     }
 
