--- a/src/css/navbar.scss
+++ b/src/css/navbar.scss
@@ -18,7 +18,7 @@
     }
     
     .PrivateTabIndicator-colorPrimary-2 {
-        background-color: transparent !important;
+        background-color: rgb(113, 175, 237) !important;
     }
     
     .MuiTab-wrapper {
