remove nav tab underline and deploy attempt

--- a/src/css/navbar.scss
+++ b/src/css/navbar.scss
@@ -20,6 +20,10 @@
     .PrivateTabIndicator-colorPrimary-2 {
         background-color: rgb(113, 175, 237) !important;
     }
+
+    .jj2 {
+        background-color: rgb(113, 175, 237) !important;
+    }
     
     .MuiTab-wrapper {
         width: 100%;
