--- a/src/css/navbar.scss
+++ b/src/css/navbar.scss
@@ -17,13 +17,9 @@
         box-shadow: 0 0 0 4px #badfff !important;
     }
     
-    .PrivateTabIndicator-colorPrimary-2 {
-        background-color: rgb(113, 175, 237) !important;
-    }
-
-    .jj2 {
-        background-color: rgb(113, 175, 237) !important;
-    }
+    // .PrivateTabIndicator-colorPrimary-2 {
+    //     background-color: rgb(113, 175, 237) !important;
+    // }
     
     .MuiTab-wrapper {
         width: 100%;
