--- a/src/css/projects.scss
+++ b/src/css/projects.scss
@@ -81,6 +81,10 @@
     @media (min-width: 576px) { h4 {margin-bottom: 0;}}
     @media (min-width: 576px) { .descriptionText {font-size: 20px;}}
     
+    @media (min-width: 633px) { .descriptionText {font-size: 15px;}}
+    @media (min-width: 633px) { .descriptionDiv {margin-top: 0px !important; padding-bottom: 0px;}}
+    @media (min-width: 633px) { .icons {text-align: left;}}
+    
     /* Medium devices (tablets, 768px and up) */
     @media (min-width: 768px) { h4, .descriptionDiv, .icons {text-align: left;}}
     @media (min-width: 768px) { .descriptionDiv {margin-top: 0px !important; padding-bottom: 0px;}}
